1st change after deployment

--- a/src/main/resources/static/assets/css/basicpages.css
+++ b/src/main/resources/static/assets/css/basicpages.css
@@ -71,7 +71,7 @@ main {
     color: #273167;
 }
 
-.base_service h3 {
+.base_service > h3 {
     color: #273167;
     margin-top: 20px;
     font-size: 1.5rem;
