--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BGD e-GOV CIRT | Homepage</title>
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script th:src="@{/assets/js/functions.js}"></script>
   <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
@@ -18,16 +21,18 @@
     .navbar-brand {
       font-weight: bold;
     }
+
     h6 {
       font-size: large;
     }
   </style>
 </head>
-<body>
-<!-- Navigation Bar -->
-<div th:replace="~{fragments/header :: menu}"></div>
 
-<div class="header">
+<body>
+  <!-- Navigation Bar -->
+  <div th:replace="~{fragments/header :: menu}"></div>
+
+  <div class="header">
     <div class="header-left">
       <div class="warning-bar row">
         <div class="col-md-8 p-2">
@@ -43,47 +48,53 @@
       <h1> through Cyber Resilience</h1>
     </div>
     <div class="slider-box" id="text-slider">
-      <img th:src="@{/assets/images/hero-3.png}" height="250" width="750" class="hero"/>
       <h2></h2>
       <p></p>
       <a class="btn btn-dark" style="background-color:#3636b2; border-radius: 100px;"></a>
       <div class="dots" id="slider-dots"></div>
     </div>
   </div>
-  
+
   <div class="container mt-3">
-      <h2>Our Pioneers</h2>
-      <div class="d-flex justify-content-center justify-content-between">
-        <div>
-          <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Honorable Chief Advisor</h6>
-          <p class="text-center"><img src="/media?id=.jpg/Pioneer-1.jpg" class="leaders-face" height="150" width="150"/></p>
-          <h6 class="text-center">Dr. Muhammad Yunus</h6>
-        </div>
-        <div>
-            <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Special Assistant to Chief Advisor</h6>
-            <p class="text-center"><img src="/media?id=.jpg/Pioneer-2.jpg" class="leaders-face" height="150" width="150"/></p>
-            <h6 class="text-center">Faiz Ahmad Taiyeb</h6>
-        </div>
-        <div>
-            <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Secretary</h6>
-            <p class="text-center"><img src="/media?id=.jpg/Pioneer-3.jpg" class="leaders-face" height="150" width="150"/></p>
-            <h6 class="text-center">Shish Haider Chowdhury, NDC</h6>
-        </div>
-        <div>
-            <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Executive Director, BCC</h6>
-            <p class="text-center"><img src="/media?id=.jpg/Pioneer-4.jpg" class="leaders-face" height="150" width="150"/></p>
-            <h6 class="text-center">Mr. Md. Abu Sayed</h6>
-        </div>
+    <h2>Our Pioneers</h2>
+    <div class="d-flex justify-content-center justify-content-between">
+      <div>
+        <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Honorable Chief Advisor
+        </h6>
+        <p class="text-center"><img src="/media?id=.jpg/Pioneer-1.jpg" class="leaders-face" height="150" width="150" />
+        </p>
+        <h6 class="text-center">Dr. Muhammad Yunus</h6>
       </div>
+      <div>
+        <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Special Assistant to
+          Chief Advisor</h6>
+        <p class="text-center"><img src="/media?id=.jpg/Pioneer-2.jpg" class="leaders-face" height="150" width="150" />
+        </p>
+        <h6 class="text-center">Faiz Ahmad Taiyeb</h6>
+      </div>
+      <div>
+        <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Secretary</h6>
+        <p class="text-center"><img src="/media?id=.jpg/Pioneer-3.jpg" class="leaders-face" height="150" width="150" />
+        </p>
+        <h6 class="text-center">Shish Haider Chowdhury, NDC</h6>
+      </div>
+      <div>
+        <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Executive Director, BCC
+        </h6>
+        <p class="text-center"><img src="/media?id=.jpg/Pioneer-4.jpg" class="leaders-face" height="150" width="150" />
+        </p>
+        <h6 class="text-center">Mr. Md. Abu Sayed</h6>
+      </div>
+    </div>
   </div>
-  <br/><br/>
+  <br /><br />
   <section class="services-section">
     <h2>Services</h2>
     <div class="slider-container">
       <div class="slider" id="service-slider">
         <a href="/service#vapt" class="service-item">
-            <img src="https://img.icons8.com/ios-filled/100/lock.png" alt="Caregiver" />
-            <p>Vulnerability Assessment & Penetration Testing (VAPT)</p> 
+          <img src="https://img.icons8.com/ios-filled/100/lock.png" alt="Caregiver" />
+          <p>Vulnerability Assessment & Penetration Testing (VAPT)</p>
         </a>
         <a href="/service#inc-response" class="service-item">
           <img src="https://img.icons8.com/ios-filled/100/security-checked.png" alt="Security Check" />
@@ -120,94 +131,106 @@
       </div>
     </div>
   </section>
-<section class="container mt-5">
-  <div class="container">
+  <section class="container mt-5">
+    <div class="container">
       <h2>Latest Alerts</h2>
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-2" th:each="alert : ${alertsList}">
-            <div class="card h-100">
-                <img src="/assets/images/thumbnails/alerts.png" th:if="${alert.getThumbnail() == null or alert.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
-                <img th:src="${alert.getThumbnail()}" th:unless="${alert.getThumbnail() == null or alert.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
-                <div class="card-body">
-                    <a th:href="'/'+${alert.getCategory()}+'/'+${alert.getUri()}" class="card-title">
-                        <h3 th:text="${alert.getTitle()}">Post Title</h3>
-                    </a>
-                    <p class="card-text" th:text="${#strings.substring(alert.getSubTitle(), 0, 150)} + '....'"></p>
-                    <a th:href="'/'+${alert.getCategory()}+'/'+${alert.getUri()}" class="btn btn-primary">Read More</a>
-                </div>
+          <div class="card h-100">
+            <img src="/assets/images/thumbnails/alerts.png"
+              th:if="${alert.getThumbnail() == null or alert.getThumbnail() == ''}" class="card-img-top"
+              alt="Post Image">
+            <img th:src="${alert.getThumbnail()}"
+              th:unless="${alert.getThumbnail() == null or alert.getThumbnail() == ''}" class="card-img-top"
+              alt="Post Image">
+            <div class="card-body">
+              <a th:href="'/'+${alert.getCategory()}+'/'+${alert.getUri()}" class="card-title">
+                <h3 th:text="${alert.getTitle()}">Post Title</h3>
+              </a>
+              <p class="card-text" th:text="${#strings.substring(alert.getSubTitle(), 0, 150)} + '....'"></p>
+              <a th:href="'/'+${alert.getCategory()}+'/'+${alert.getUri()}" class="btn btn-primary">Read More</a>
             </div>
+          </div>
         </div>
       </div>
       <a class="show-more" href="/alerts">Show More</a>
-      <br/><br/>
-  </div>
-  <div class="container">
+      <br /><br />
+    </div>
+    <div class="container">
       <h2>Magazines</h2>
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-4" th:each="magazine : ${magazinesList}">
-            <div class="card h-100">
-                <img th:src="'/assets/images/thumbnails/' + ${category} + '.png'" th:if="${magazine.getThumbnail() == null or magazine.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
-                <img th:src="${magazine.getThumbnail()}" th:unless="${magazine.getThumbnail() == null or magazine.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
-                <div class="card-body">
-                    <a th:href="'/'+${magazine.getCategory()}+'/'+${magazine.getUri()}" class="card-title">
-                        <h3 th:text="${magazine.getTitle()}">Post Title</h3>
-                    </a>
-                    <p class="card-text" th:text="${#strings.substring(magazine.getSubTitle(), 0, 150)} + '....'"></p>
-                    <a th:href="'/'+${magazine.getCategory()}+'/'+${magazine.getUri()}" class="btn btn-primary">Read More</a>
-                </div>
+          <div class="card h-100">
+            <img th:src="'/assets/images/thumbnails/' + ${category} + '.png'"
+              th:if="${magazine.getThumbnail() == null or magazine.getThumbnail() == ''}" class="card-img-top"
+              alt="Post Image">
+            <img th:src="${magazine.getThumbnail()}"
+              th:unless="${magazine.getThumbnail() == null or magazine.getThumbnail() == ''}" class="card-img-top"
+              alt="Post Image">
+            <div class="card-body">
+              <a th:href="'/'+${magazine.getCategory()}+'/'+${magazine.getUri()}" class="card-title">
+                <h3 th:text="${magazine.getTitle()}">Post Title</h3>
+              </a>
+              <p class="card-text" th:text="${#strings.substring(magazine.getSubTitle(), 0, 150)} + '....'"></p>
+              <a th:href="'/'+${magazine.getCategory()}+'/'+${magazine.getUri()}" class="btn btn-primary">Read More</a>
             </div>
+          </div>
         </div>
       </div>
       <a class="show-more" href="/magazines">Show More</a>
-  </div>
-  
-  <div class="container">
+    </div>
+
+    <div class="container">
       <h2>News & Events</h2>
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-4" th:each="news : ${newsList}">
-            <div class="card h-100">
-                <img src="/assets/images/thumbnails/news.png" th:if="${news.getThumbnail() == null or news.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
-                <img th:src="${news.getThumbnail()}" th:unless="${news.getThumbnail() == null or news.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
-                <div class="card-body">
-                    <a th:href="'/'+${news.getCategory()}+'/'+${news.getUri()}" class="card-title">
-                        <h3 th:text="${news.getTitle()}">Post Title</h3>
-                    </a>
-                    <p class="card-text" th:text="${#strings.substring(news.getSubTitle(), 0, 150)} + '....'"></p>
-                    <a th:href="'/'+${news.getCategory()}+'/'+${news.getUri()}" class="btn btn-primary">Read More</a>
-                </div>
+          <div class="card h-100">
+            <img src="/assets/images/thumbnails/news.png"
+              th:if="${news.getThumbnail() == null or news.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
+            <img th:src="${news.getThumbnail()}" th:unless="${news.getThumbnail() == null or news.getThumbnail() == ''}"
+              class="card-img-top" alt="Post Image">
+            <div class="card-body">
+              <a th:href="'/'+${news.getCategory()}+'/'+${news.getUri()}" class="card-title">
+                <h3 th:text="${news.getTitle()}">Post Title</h3>
+              </a>
+              <p class="card-text" th:text="${#strings.substring(news.getSubTitle(), 0, 150)} + '....'"></p>
+              <a th:href="'/'+${news.getCategory()}+'/'+${news.getUri()}" class="btn btn-primary">Read More</a>
             </div>
+          </div>
         </div>
       </div>
       <a class="show-more" href="/news">Show More</a>
+    </div>
+  </section>
+  <br /><br />
+  <div class="container mb-3">
+    <h2> Collaborations With </h2>
+    <div class="d-flex justify-content-center">
+      <div class="col-md-2 text-center">
+        <img src="/assets/images/collaboration-logo (1).png" alt="Logo 1" height="100" width="150">
+      </div>
+      <div class="col-md-2 text-center">
+        <img src="/assets/images/collaboration-logo (2).png" alt="Logo 2" height="100" width="150">
+      </div>
+      <div class="col-md-2 text-center">
+        <img src="/assets/images/collaboration-logo (3).png" alt="Logo 3" height="100" width="150">
+      </div>
+      <div class="col-md-2 text-center">
+        <img src="/assets/images/collaboration-logo (4).png" alt="Logo 4" height="100" width="150">
+      </div>
+      <div class="col-md-2 text-center">
+        <img src="/assets/images/collaboration-logo (5).png" alt="Logo 5" height="100" width="150">
+      </div>
+    </div>
   </div>
-</section>
-<br/><br/>
-<div class="container mb-3">
-  <h2> Collaborations With </h2>
-  <div class="d-flex justify-content-center">
-      <div class="col-md-2 text-center">
-          <img src="/assets/images/collaboration-logo (1).png" alt="Logo 1" height="100" width="150">
-      </div>
-      <div class="col-md-2 text-center">
-          <img src="/assets/images/collaboration-logo (2).png" alt="Logo 2" height="100" width="150">
-      </div>
-      <div class="col-md-2 text-center">
-          <img src="/assets/images/collaboration-logo (3).png" alt="Logo 3" height="100" width="150">
-      </div>
-      <div class="col-md-2 text-center">
-          <img src="/assets/images/collaboration-logo (4).png" alt="Logo 4" height="100" width="150">
-      </div>
-      <div class="col-md-2 text-center">
-          <img src="/assets/images/collaboration-logo (5).png" alt="Logo 5" height="100" width="150">
-      </div>
-  </div>
-</div>   
 
-<div th:replace="~{fragments/footer :: footer}"></div>         
+  <div th:replace="~{fragments/footer :: footer}"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script th:inline="javascript">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script th:inline="javascript">
     updateClock();
     setInterval(updateClock, 30000);
     //let myVar = [[${someThymeleafVar}]];
@@ -228,14 +251,35 @@
       }
     });
 
-    let sliderData =  /*[[${highlights}]]*/ [];
+    let sliderData =  /*[[${highlights}]]*/[];
     sliderData.forEach((_, index) => {
       $("#slider-dots").append(`<div class="dot" data-index="${index}"></div>`);
     });
     //$(".dot").eq(0).addClass("active");
     let currentSlide = 0;
+    // for initial slider data
+    const data = sliderData[currentSlide];
+    $("#text-slider h2").fadeOut(300, function () {
+      $(this).text(data.title).fadeIn(300);
+    });
+
+    $("#text-slider p").fadeOut(300, function () {
+      $(this).text(data.body).fadeIn(300);
+    });
+
+    $("#text-slider a").fadeOut(300, function () {
+      $(this).prop("href", data.url).fadeIn(300);
+    });
+
+    $("#text-slider a").fadeOut(300, function () {
+      $(this).text("Explore").fadeIn(300);
+    });
+
+    $(".dot").removeClass("active");
+    $(".dot").eq(currentSlide).addClass("active");
+    currentSlide++;
     setInterval(() => {
-      currentSlide = currentSlide  % sliderData.length;
+      currentSlide = currentSlide % sliderData.length;
       const data = sliderData[currentSlide];
 
       $("#text-slider h2").fadeOut(300, function () {
@@ -257,7 +301,6 @@
       $(".dot").removeClass("active");
       $(".dot").eq(currentSlide).addClass("active");
       currentSlide++;
-      $(".hero").slideUp();
     }, 3300);
 
     $(".dot").on("click", function () {
@@ -280,6 +323,7 @@
       $(".dot").removeClass("active");
       $(this).addClass("active");
     });
-</script>
+  </script>
 </body>
-</html> 
+
+</html>
