--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -57,34 +57,44 @@
 
   <div class="container mt-3">
     <h2>Our Pioneers</h2>
-    <div class="d-flex justify-content-center justify-content-between">
-      <div>
-        <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Honorable Chief Advisor
-        </h6>
-        <p class="text-center"><img src="/media?id=.jpg/Pioneer-1.jpg" class="leaders-face" height="150" width="150" />
-        </p>
-        <h6 class="text-center">Dr. Muhammad Yunus</h6>
+    <div class="row g-4 justify-content-center">
+
+      <div class="col-12 col-sm-6 col-md-3 text-center">
+        <div class="pioneer-badge">
+          <span class="badge bg-primary mb-2">Honorable Chief Advisor</span>
+        </div>
+        <img src="/media?id=.jpg/Pioneer-1.jpg" class="img-fluid rounded-circle leaders-face mb-2"
+          alt="Dr. Muhammad Yunus">
+        <h6>Dr. Muhammad Yunus</h6>
       </div>
-      <div>
-        <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Special Assistant to
-          Chief Advisor</h6>
-        <p class="text-center"><img src="/media?id=.jpg/Pioneer-2.jpg" class="leaders-face" height="150" width="150" />
-        </p>
-        <h6 class="text-center">Faiz Ahmad Taiyeb</h6>
+
+      <div class="col-12 col-sm-6 col-md-3 text-center">
+        <div class="pioneer-badge">
+          <span class="badge bg-primary mb-2">Special Assistant to Chief Advisor</span>
+        </div>
+        <img src="/media?id=.jpg/Pioneer-2.jpg" class="img-fluid rounded-circle leaders-face mb-2"
+          alt="Faiz Ahmad Taiyeb">
+        <h6>Faiz Ahmad Taiyeb</h6>
       </div>
-      <div>
-        <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Secretary</h6>
-        <p class="text-center"><img src="/media?id=.jpg/Pioneer-3.jpg" class="leaders-face" height="150" width="150" />
-        </p>
-        <h6 class="text-center">Shish Haider Chowdhury, NDC</h6>
+
+      <div class="col-12 col-sm-6 col-md-3 text-center">
+        <div class="pioneer-badge">
+        <span class="badge bg-primary mb-2"> Secretary </span>
+        </div>
+        <img src="/media?id=.jpg/Pioneer-3.jpg" class="img-fluid rounded-circle leaders-face mb-2"
+          alt="Shish Haider Chowdhury">
+        <h6>Shish Haider Chowdhury, NDC</h6>
       </div>
-      <div>
-        <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Executive Director, BCC
-        </h6>
-        <p class="text-center"><img src="/media?id=.jpg/Pioneer-4.jpg" class="leaders-face" height="150" width="150" />
-        </p>
-        <h6 class="text-center">Mr. Md. Abu Sayed</h6>
+
+      <div class="col-12 col-sm-6 col-md-3 text-center">
+        <div class="pioneer-badge">
+          <span class="badge bg-primary mb-2">Executive Director, BCC</span>
+        </div>
+        <img src="/media?id=.jpg/Pioneer-4.jpg" class="img-fluid rounded-circle leaders-face mb-2"
+          alt="Mr. Md. Abu Sayed">
+        <h6>Mr. Md. Abu Sayed</h6>
       </div>
+
     </div>
   </div>
   <br /><br />
@@ -108,10 +118,6 @@
           <img src="https://img.icons8.com/pastel-glyph/100/view.png" alt="Digital Forensics Icon" />
           <p>Digital Forensics</p>
         </a>
-        <!-- <a href="/service#data-center" class="service-item">
-          <img src="https://img.icons8.com/ios-filled/100/cloud.png" alt="C-TAS" />
-          <p>Data Center Operations</p>
-        </a> -->
         <a href="/service#cti" class="service-item">
           <img src="https://img.icons8.com/ios-filled/100/monitor.png" alt="Mock Training" />
           <p>Cyber Threat Intelligence (CTI)</p>
